# PhosphorAI

./: .env.example  .gitignore  Makefile  README.md  data_processing.py  pyproject.toml
OLS/: OLS.py
OLS/data/: model_ready_lag.csv
OLS/output/: OLS.py  OLSresult_Optimal.csv  OLSresult_Original.csv  OLSresult_Time_Series.csv  OLSresult_Time_Series_log.json  OLSresult_lag.csv
data/: Copy of R3 QUALITY 2025.xlsx
data/processed/: README.md
data/raw/: README.md
outputs/: correlation_core_metrics.csv  correlation_pearson_core_metrics.csv  descriptive_stats.csv  model_ready.csv  monthly_boxplot_stats.csv  normality_core_metrics.csv  preprocessing_summary.json  processed_full.csv  transition_breakpoint_report.json  vif_core_features.csv  vif_feature_selection.json
reports/: README.md
reports/ols/: README.md
reports/preprocessing/: README.md
reports/random_forest/: README.md
reports/random_forest/combo_search/: README.md
reports/random_forest/core_feature/: README.md
reports/random_forest/full_feature/: README.md
reports/random_forest/legacy/: README.md
scripts/: run_acf_plot.py  run_feed_model_optimized.py  run_ols.py  run_preprocessing.py  run_rf_combo_search.py  run_rf_core.py  run_rf_full.py
src/cpo_phosphorus/: __init__.py  paths.py
src/cpo_phosphorus/models/: __init__.py  acf_plot.py  feed_model_optimized.py  ols.py  random_forest_core.py  random_forest_full.py  rf_combo_search.py
src/cpo_phosphorus/pipelines/: __init__.py  data_processing.py  sklearn_preprocessing.py
